<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/appLogo"
            android:layout_width="264dp"
            android:layout_height="186dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/Circular"
            app:srcCompat="@drawable/master_copy"
            tools:ignore="ImageContrastCheck" />

        <ScrollView
            android:layout_width="393dp"
            android:layout_height="228dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appLogo">

            <TextView
                android:id="@+id/Question_text"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/baloo_bhai_2_semibold"
                android:text="@string/Placeholder"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </ScrollView>

        <Button
            android:id="@+id/noBtn"
            style="@style/Button_style"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:fontFamily="@font/baloo_bhai_2_bold"
            android:text="@string/noBtn"
            android:layout_marginTop="220dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/Yes_Btn"
            app:layout_constraintTop_toBottomOf="@+id/appLogo"
            app:layout_constraintVertical_bias="0.056" />

        <Button
            android:id="@+id/Yes_Btn"
            style="@style/Button_style"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/baloo_bhai_2_bold"
            android:text="@string/BtnName"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/noBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appLogo"
            app:layout_constraintVertical_bias="0.056" />

        <Button
            android:id="@+id/PreviousBtn"
            style="@style/Button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/baloo_bhai_2_bold"
            android:text="@string/pre_Btn"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/nextBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noBtn" />

        <Button
            android:id="@+id/nextBtn"
            style="@style/Button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/baloo_bhai_2_bold"
            android:text="@string/nextBtn"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/PreviousBtn"
            app:layout_constraintTop_toBottomOf="@+id/Yes_Btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>